--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,8 @@
 .App {
   text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +15,216 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+@media screen and (max-width: 1980px){
+  header{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    height: 500px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(18, 18, 60, 0.9);
+  }
+  header  h1{
+    font-size: 6em;
+   
+  }
+  img{
+    width: 100px;
+    height: 50px;
+    cursor: pointer;
+  }
+
+  header a{
+    margin-top: 60px;
+    color: white;
+    padding: 5px 10px;
+    font-size: 1.5em;
+    border-radius: 5px;
+    background-color:rgba(249, 115, 22, 0.8);
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+  }
+
+  header a:hover{
+    background-color: rgba(249, 115, 22, 0.6);
+  }
+  
+
+  /* button{
+    margin-top: 20px;
+    color: white;
+    padding: 5px 10px;
+    font-size: 1.5em;
+    border-radius: 5px;
+    background-color:rgba(249, 115, 22, 0.8);
+    border: none;
+    cursor: pointer;
+  } */
+
+  header p{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgba(249, 115, 22, 0.8);
+    margin-bottom: 30px;
+    }
+
+  .about h2{
+    color: rgba(18, 18, 60, 0.9);
+    font-size: 2em;
+  }
+  .about p{
+    
+    
+    font-size: 1em;
+    padding: 0px 10px;
+    
+  }
+
+  video{
+    width: 100%;
+    height: 500px;  
+  }
+
+  .about_ultimo{
+    margin-bottom: 100px;
+  }
+
+  footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(18, 18, 60, 0.9);
+    color: white !important;
+    height: 100px;
+  }
+  nav{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    
+  }
+  .about h1{
+    font-size: 3em;
+  }
+
+  .about{
+    align-items: center;
+    justify-content: center;
+    color: rgba(249, 115, 22, 0.8);
+    margin: 10px 0px;
+  }
+
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+@media screen and (max-width: 450px) {
+  header{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    height: 400px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(18, 18, 60, 0.9);
   }
-  to {
-    transform: rotate(360deg);
+  header h1{
+    font-size: 3em;
   }
+
+  /* button{
+    margin-top: 20px;
+    color: white;
+    padding: 5px 10px;
+    font-size: 1.5em;
+    border-radius: 5px;
+    background-color:rgba(249, 115, 22, 0.8);
+    border: none;
+    cursor: pointer;
+  } */
+
+  header p{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgba(249, 115, 22, 0.8);
+    }
+
+  img{
+    width: 100px;
+    height: 50px;
+    cursor: pointer;
+  }
+
+  header a{
+    margin-top: 20px;
+    color: white;
+    padding: 5px 10px;
+    font-size: 1.5em;
+    border-radius: 5px;
+    background-color:rgba(249, 115, 22, 0.8);
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+  }
+
+  .about h2{
+    color: rgba(18, 18, 60, 0.9);
+  }
+  nav{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    
+  }
+
+  .about{
+    align-items: center;
+    justify-content: center;
+    color: rgba(249, 115, 22, 0.8);
+    margin: 10px 0px;
+  }
+
+  .about >  h1{
+    font-size: 2.3em;
+
+  }
+  .about p{
+    display: flex;
+    text-align: justify;
+    padding: 0px 10px;
+    
+  }
+
+  video{
+    width: 100%;
+    height: 300px;  
+  }
+
+  footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(18, 18, 60, 0.9);
+    color: white !important;
+    height: 100px;
+  }
+  footer > p{
+    font-size: 1em;
+    color: white;
+  }
+  .about_ultimo{
+    margin-bottom: 100px;
+  }
+  
+
+  
 }
+
+
