--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,9 @@
   header a:hover{
     background-color: rgba(249, 115, 22, 0.6);
   }
+  button{
+    background-color: rgba(249, 115, 22, 0.6);
+  }
   
 
   /* button{
@@ -88,9 +91,30 @@
     text-decoration: none;
     color: white;
   }
+  .video-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(14, 14, 89);
+    width: 60%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+  .video-container-intro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(25, 25, 134);
+    padding: 10px;
+
+
+  }
   video{
     width: 100%;
-    height: 500px;  
+   
+    background-color: rgb(21, 21, 118);
   }
 
   .about_ultimo{
@@ -123,9 +147,40 @@
     color: rgba(249, 115, 22, 0.8);
     margin: 10px 0px;
   }
+  .loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 20vh;
+  }
+  
+  .loading-icon {
+    font-size: 3rem;
+    animation: spin 1s linear infinite;
+  }
+  
+ 
+
+  .loading-text {
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #333;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
 
 
 }
+
 
 
 @media screen and (max-width: 450px) {
@@ -141,17 +196,34 @@
   header h1{
     font-size: 3em;
   }
+  
+  .video-container{
+    display: block;
+    justify-content: none;
+    align-items: none;
+    background-color: white;
+    width: 100%;
+    margin: auto;
+    padding: 0px;
+    
+    border-radius: 0px;
+  }
+  .video-container-intro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:white;
+    padding: 0px;
 
-  /* button{
-    margin-top: 20px;
-    color: white;
-    padding: 5px 10px;
-    font-size: 1.5em;
-    border-radius: 5px;
-    background-color:rgba(249, 115, 22, 0.8);
-    border: none;
-    cursor: pointer;
-  } */
+
+  }
+  video{
+    width: 100%;
+    height: 300px;  
+    background-color: white !important;
+  }
+
+
 
   header p{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -187,6 +259,36 @@
     
   }
 
+  .loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 20vh;
+  }
+  
+  .loading-icon {
+    font-size: 3rem;
+    animation: spin 1s linear infinite;
+  }
+  
+ 
+
+  .loading-text {
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #333;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
   .about{
     align-items: center;
     justify-content: center;
@@ -203,11 +305,6 @@
     text-align: justify;
     padding: 0px 10px;
     
-  }
-
-  video{
-    width: 100%;
-    height: 300px;  
   }
 
   footer{
