--- a/src/Registration/Registration.css
+++ b/src/Registration/Registration.css
@@ -51,8 +51,9 @@ label {
   margin-bottom: 5px;
 }
 button{
-  background-color: #007bff;
+ 
   color: #fff;
+   background-color: rgba(249, 115, 22, 0.6);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -61,6 +62,18 @@ button{
   margin-top: 10px;
 
 }
+
+/* a{
+  color: #fff;
+   background-color: rgba(249, 115, 22, 0.6);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  margin-top: 10px;
+  text-decoration: none;
+} */
 input,
 textarea {
   width: 97%;
@@ -83,15 +96,21 @@ form{
 
 }
 
+
 button {
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: rgba(249, 115, 22, 0.6);
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+.cadastrar{
+ 
+  color: #fff;
+  text-decoration: none;
 }
 
 /* Responsivo */
