--- a/src/Registration/Registration.css
+++ b/src/Registration/Registration.css
@@ -148,7 +148,7 @@ button {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: rgba(249, 115, 22, 0.6);
     color: #fff;
     border: none;
     border-radius: 5px;
