--- a/src/App.css
+++ b/src/App.css
@@ -1,603 +1,16 @@
-.App {
-  text-align: center;
-
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+:root {
+  --cor-azul-escuro: #002147; /* Azul  escuro*/
+  --cor-azul-claro: #024089; /* Azul claro */
+  --cor-laranja: #FF6D1D; /* Laranja*/
+  --cor-amarelho: #FFA617; /* Amarelo */
+  --cor-cinza: #E6E6E6; /* Cinza */
+  --cor-branco: #FFFFFF; /* Branco */
+  --cor-preto: #000000; /* Preto */
 }
 
 
-
-
-@media screen and (max-width: 1980px){
-  *, :after, :before {
-
-    --tw-gradient-from-position: ;
-    --tw-gradient-via-position: ;
-    --tw-gradient-to-position: ;
-    --tw-ordinal: ;
-    --tw-slashed-zero: ;
-    --tw-numeric-figure: ;
-    --tw-numeric-spacing: ;
-    --tw-numeric-fraction: ;
-    --tw-ring-inset: ;
-    --tw-ring-offset-width: 0px;
-    --tw-ring-offset-color: #fff;
-    --tw-ring-color: rgba(59,130,246,.5);
-    --tw-ring-offset-shadow: 0 0 #0000;
-    --tw-ring-shadow: 0 0 #0000;
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    --tw-blur: ;
-    --tw-brightness: ;
-    --tw-contrast: ;
-    --tw-grayscale: ;
-    --tw-hue-rotate: ;
-    --tw-invert: ;
-    --tw-saturate: ;
-    --tw-sepia: ;
-    --tw-drop-shadow: ;
-    --tw-backdrop-blur: ;
-    --tw-backdrop-brightness: ;
-    /* --tw-backdrop-contrast: ; */
-    --tw-backdrop-grayscale: ;
-    --tw-backdrop-hue-rotate: ;
-    --tw-backdrop-invert: ;
-    --tw-backdrop-opacity: ;
-    --tw-backdrop-saturate: ;
-    --tw-backdrop-sepia: ;
+.container-body{
+  padding: 0;
+  margin: 0;
+  font-family: Quicksand, sans-serif;
 }
-  header{
-    display: flex;
-    flex-direction: column;
-    color: white;
-    height: 600px;
-    align-items: center;
-    justify-content: center;
-    /* background-color: rgba(18, 18, 60, 0.9); */
-    background: linear-gradient(to bottom, #29294f, #2e3344); /* Substitua com as cores reais */
-
-  }
-
-  .about-content-intro{
-      display: flex;
-      flex-direction: row;
-      width: 90%;
-      margin: 20px auto 0 auto;
-  }
-
-  .footer{
-    display: flex;
-    height: 100px;
-    align-items: center;
-    justify-content: center;
-  }
-  .about-content{
-    display: flex;
-    flex-direction: column;
-    margin-top: 30px;
-    
-  
-  }
-  .footer-container{
-    margin-top: 10em;
-  }
-  .about-content h2{
-    text-align: center;
-  }
-  header  h1{
-    font-size: 6em;
-   
-  }
-  img{
-    width: 100px;
-    height: 50px;
-    cursor: pointer;
-  }
-
-  header a{
-    margin-top: 60px;
-    color: white;
-    padding: 5px 10px;
-    font-size: 1.5em;
-    border-radius: 5px;
-    background-color:rgba(249, 115, 22, 0.8);
-    border: none;
-    cursor: pointer;
-    text-decoration: none;
-  }
-
-  header a:hover{
-    background-color: rgba(249, 115, 22, 0.6);
-  }
-  button{
-    background-color: rgba(249, 115, 22, 0.6);
-  }
-  
-
-  /* button{
-    margin-top: 20px;
-    color: white;
-    padding: 5px 10px;
-    font-size: 1.5em;
-    border-radius: 5px;
-    background-color:rgba(249, 115, 22, 0.8);
-    border: none;
-    cursor: pointer;
-  } */
-
-  header p{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color:white;
-    margin-bottom: 30px;
-    }
-
-  .about h2{
-    color: rgba(18, 18, 60, 0.9);
-    font-size: 2em;
-  }
-  .about p{
-    
-    
-    font-size: 1em;
-    padding: 0px 10px;
-    
-  }
-
-  a{
-    text-decoration: none;
-    color: white;
-  }
- 
-  .video-container-intro{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    width: 600px;
-    padding:  20px 0;
-
-
-  }
-  .video{
-    width: 500px;
-  }
-  
-  .about-image{
-    min-width: 100px;
-    max-width: 100px;
-   
-  }
-  .about-text p{
-    padding: 0;
-  }
-  .about-text{
-    text-align: justify;
-    
-  }
-
-  .about-item {
-    display: flex;
-
-    
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px  rgb(35, 30, 30);
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-
-  .footer-container p{
-    
-    padding: 0;
-  margin-bottom: 30px;
-
-  }
-
-
-
-  .about_ultimo{
-    margin-bottom: 100px;
-  }
-
-  .about-section {
-    display: flex;
-    flex-direction: column;
-    background-color:#2e3344 ;
-    color: white;
-    justify-content: flex-start;
-    
-  
-  }
-  
-
-  .video-container-intro{
-    display: flex;
-    width: 100%;
-  }
-  .video-container-intro > video{
-    width: 60%;
-  }
-
-  footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-   
-    color: white !important;
-    height: 100px;
-  }
-  nav{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
-    
-  }
-  .about h1{
-    font-size: 3em;
-  }
-
-  .about{
-    align-items: center;
-    justify-content: center;
-    color: rgba(249, 115, 22, 0.8);
-    margin: 10px 0px;
-  }
-  .loading-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 20vh;
-  }
-  
-  .loading-icon {
-    font-size: 3rem;
-    animation: spin 1s linear infinite;
-  }
-  
- 
-
-  .loading-text {
-    margin-top: 10px;
-    font-size: 1rem;
-    color: #333;
-  }
-  
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
-    .header-logo{
-      width: 450px;
-      height: 450px;
-      cursor: pointer;
-    
-    }
-
-    .video-container{
-      width: 100%;
-    }
-
-
-}
-
-  @media screen and (max-width: 1050px) {
-    .about-content-intro{
-      width: 95%;
-      font-size: small;
-    }
-
-}
-
-@media screen and (max-width: 850px) {
- 
-    .about-content-intro{
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      font-size: medium;
-    
-    
-  }
-  
-  .video-container-intro > video{
-    width: 90%;
-  }
-  .video-container{
-    width: 100%;
-  }
-  .about-item{
-    display: flex;
-
-    
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: none;
-    display: flex;
-    align-items: center;
-    gap: 3px;
-  }
-
-}
-
-@media screen and (max-width: 450px) {
-  header{
-    display: flex;
-    flex-direction: column;
-    color: white;
-    height: 400px;
-    align-items: center;
-    justify-content: center;
-    /* background-color: rgba(18, 18, 60, 0.9); */
-    background: linear-gradient(#29294f, #2e3344);
-
-  }
-  header h1{
-    font-size: 3em;
-  }
-  .video-container-intro > video{
-    width: 100%;
-  }
-  .video-container{
-    display: block;
-    justify-content: none;
-    align-items: none;
-    background-color: white;
-    width: 100%;
-    margin: auto;
-    padding: 0px;
-    
-    border-radius: 0px;
-  }
-  .video-container-intro{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:white;
-    padding: 0px;
-
-
-  }
-  /* video{
-    width: 100%;
-    height: 300px;  
-    background-color: white !important;
-  } */
-
-
-
-  header p{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: rgba(255, 255, 255, 0.8);
-    }
-
-  img{
-    width: 100px;
-    height: 50px;
-    cursor: pointer;
-  }
-
-  header a{
-    margin-top: 20px;
-    color: white;
-    padding: 5px 10px;
-    font-size: 1.2em;
-    border-radius: 5px;
-    background-color:rgba(249, 115, 22, 0.8);
-    border: none;
-    cursor: pointer;
-    text-decoration: none;
-  }
-
-  .about h2{
-    color: rgba(18, 18, 60, 0.9);
-  }
-  nav{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
-    
-  }
-
-  .loading-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 20vh;
-  }
-  
-  .loading-icon {
-    font-size: 3rem;
-    animation: spin 1s linear infinite;
-  }
-  
- 
-
-  .loading-text {
-    margin-top: 10px;
-    font-size: 1rem;
-    color: #333;
-  }
-  
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
-  .about{
-    align-items: center;
-    justify-content: center;
-    color: rgba(249, 115, 22, 0.8);
-    margin: 10px 0px;
-  }
-
-  .about >  h1{
-    font-size: 2.3em;
-
-  }
-  .about p{
-    display: flex;
-    text-align: justify;
-    padding: 0px 10px;
-    
-  }
-
-  footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-image: linear-gradient(rgb(9 4 64 / 90%), rgb(0 0 0 / 90%));
-    
-    height: 100px;
-  }
-  footer > p{
-    font-size: 1em;
-    color: white;
-  }
-  .about_ultimo{
-    margin-bottom: 100px;
-  }
-  .about-section {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-   
-    background-color:#2e3344 ;
-    
- 
-    justify-content: flex-start;
-  }
-  .about-content{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    background-image:linear-gradient( #000000,#2e3344  );
-    margin-bottom: 0em;
-    margin-top: 00px;
-    
-  }
-  .footer-container{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin-top: 3em;
-   
-  }
-
-  .about-content-intro{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  
-  }
-
-  .video-container{
-    width: 100%;
-  }
-
-
-
-.about-item {
-    display: flex;
-    justify-content: start;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: none;
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-.about-image {
-  min-width: 100px;
-  max-width: 100px;
-  margin-right: 1em;
-}
-
-.about-text {
-    text-align: left;
-    padding: 0px;
-}
-
-.about-video {
-    width: 100%;
-    max-width: 640px; /* Ajuste conforme necessário */
-}
-.video{
-    width: 100%;
-    height: 100px; 
-    background-color: white !important;
-  
-}
-
-.about-text h2 {
-    color: #007BFF;
-    font-size: 1.4em;
-}
-
-.about-text p {
-    font-size: 16px;
-}
-
-/* CSS adicional para o resto da sua seção "Sobre", se necessário */
-
-.header-gradient {
-  background: linear-gradient(to bottom, #29294f, #2e3344 ); /* Substitua com as cores reais */
-  padding: 20px;
-  color: #fff;
-  text-align: center;
-}
-
-.header-content {
-  margin-bottom: 20px;
-}
-
-.header-cta a {
-  color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.header-logo {
-  width: 250px;
-  height: 250px;
-  cursor: pointer;
-}
-
-/* CSS adicional para o resto do seu cabeçalho, se necessário */
-
-
-
-  
-
-  
-}
-
-
