--- a/src/Registration/Registration.css
+++ b/src/Registration/Registration.css
@@ -1,260 +1,160 @@
-Formulario.css
-
-.container {
+.container-registration{
   display: flex;
-  justify-content: center;
-  max-width: 600px;
-  color: rgb(91, 24, 153);;;
-  margin: 0 auto;
-  padding: 20px;
-}
-.container-logo{
-  display: flex;
-
+  
+  align-items: center;
   flex-direction: column;
+
+
+}
+
+.container-logo > img{
+  width: 300px;
+}
+
+.container-message{
+  display: flex;
+  flex-direction: column;
+  font-family: Quicksand, sans-serif;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
+  font-weight: bold;
+  color: var(--cor-azul-escuro);
 }
-h2{
-  color: rgb(91, 24, 153);;
+.container-message >h2{
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 0 ;
 }
-label{
-  display: block;
-  margin-bottom: 5px;
-  font-size: 12;
-}
-.logo{
-    
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: rgb(91, 24, 153);
-  width: 100px;
-  height: 50px;
-  cursor: pointer;
-  margin: 0px;
+.container-message{
+  margin:0 0 20px 0;
+
 }
 
-h2 {
-  text-align: center;
-}
-
-.form-group {
-  margin-bottom: 20px;
+.container-formulario{
   display: flex;
   flex-direction: column;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-}
-button{
- 
-  color: #fff;
-   background-color: rgba(249, 115, 22, 0.6);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 10px;
-  width: 100%;
-  margin-top: 10px;
-
-}
-
-/* a{
-  color: #fff;
-   background-color: rgba(249, 115, 22, 0.6);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 10px;
-  width: 100%;
-  margin-top: 10px;
-  text-decoration: none;
-} */
-input,
-textarea {
-  width: 97%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-form{
   width: 50%;
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: rgb(240, 239, 239);
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
-  margin: auto;
-  border-color: 2px solid black;
-  padding: 20px;
-
-
+  min-width: 500px;
+  max-width: 1000px;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 70px;
+  background-color: #E6E6E6;
+  border-radius: 8px;
+  margin: 30px auto;
+  max-width: 1000px;
+ box-sizing: border-box;
 }
 
-
-button {
-  display: block;
+.container-campos{
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.form-group > label{
+  font-size: 1.2em;
+  font-family: Quicksand, sans-serif;
+  margin: 5px auto;
+}
+
+.form-group > input{
   padding: 10px;
-  background-color: rgba(249, 115, 22, 0.6);
-  color: #fff;
+  display: flex;
+  flex-direction: column;
+  border-radius: 4px;
+  border: 1px solid var(--cor-azul-escuro);
+  border: 1px solid  #28262655;
+}
+.select{
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid var(--cor-azul-escuro);
+
+}
+.select2-container{
+  width: 90%;
+  
+  border-radius: 4px;
+  border: 1px solid var(--cor-azul-escuro);
+}
+.form-group{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.form-group > button{
+  padding: 10px;
+  background-color: var(--cor-amarelho);
+  color: var(--cor-branco);
   border: none;
-  border-radius: 5px;
+
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 1.2em;
+  font-family: Quicksand, sans-serif;
+  margin: 10px 0 10px 0;
   cursor: pointer;
 }
-.cadastrar{
- 
-  color: #fff;
-  text-decoration: none;
+
+
+.form-group > .first-button{
+  margin-top: 40px;
 }
 
-/* Responsivo */
-@media (max-width: 768px) {
-  .container {
-    padding: 10px;
-  }
-  .logo{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 10px;
-    color: rgba(18, 18, 60, 0.9);
-    height: 100vh;
-    align-items: center;
-    width: 10px;
-    cursor: pointer;
-    margin: 0px;
-  }
+textarea{
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid var(--cor-azul-escuro);
+  padding: 10px;
+  box-sizing: border-box;
 }
 
-
-@media screen and (max-width: 450px){
-  .select{
-    display: block;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 12;
-  }
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: rgba(249, 115, 22, 0.6);
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-
-  }
-  h2 {
-    text-align: center;
-  }
+.btn-container{
+  display: flex;
   
-  .form-group {
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
 
-  }
-
-  
- label{
-    display: block;
-    margin-bottom: 5px;
-    font-size: 12;
- }
-
- a{
-  text-decoration: none;
-  color: white;
- }
-
-  .logo{
-    
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: rgba(18, 18, 60, 0.9);
-    width: 100px;
-    height: 50px;
-    cursor: pointer;
-    margin: 0px;
-  }
-  .container-logo{
-    display: flex;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .container {
-    display: flex;
-    flex-direction: column;
-   
-    padding: 10px;
-    color: rgba(18, 18, 60, 0.9);
-    align-items: center;
-
-    margin: 0px;
-  }
-  .container h2 {
-    font-size: 1.8rem;
-    color: rgba(18, 18, 60, 0.9);
-    margin: 0 0 10px 0;
-    padding: 0;
-  }
-  input,
-  textarea {
-    padding: 10px;
-    border: 1px solid #ccc;
-  }
-  button {
-    padding: 5px;
-  }
-  form {
-    width: 90%;
-    margin: 0 auto;
-    padding: 10px;
-    border-radius: 10px;
-    border-color: 2px solid black;
-  }
-
-  input{
-    width: 93.6%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  
-  }
-  textarea{
-    width: 93.6%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  .container-logo a{
-    display: flex;
-   
-    padding: 0;
-    margin: 0;
-  
-  }
-
-  
 }
 
-@media screen and (max-width: 300px) {
-  h2 {
-    font-size: 1.2rem;
-  }
+.form-group > .btn-previous{
+  padding: 10px;
+  background-color: var(--cor-laranja);
+  color: var(--cor-branco);
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 1.2em;
+  font-family: Quicksand, sans-serif;
+  margin: 40px 0 0px 0;
+  cursor: pointer;
+}
+.btn-container >.btn-cadastrar{
+  padding: 10px;
+  background-color: var(--cor-amarelho);
+  color: var(--cor-branco);
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 1.2em;
+  font-family: Quicksand, sans-serif; 
+  cursor: pointer;
+}
 
+.btn-container > .btn-previous{
+  padding: 10px;
+  background-color: var(--cor-laranja);
+  color: var(--cor-branco);
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 1.2em;
+  font-family: Quicksand, sans-serif;
+  margin: 40px 0 0px 0;
+  cursor: pointer;
 }
