--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,12 @@
   --cor-preto: #000000; /* Preto */
 }
 
-
+body{
+  margin: 0;
+  padding: 0;
+  font-family: Quicksand, sans-serif;
+  width: 100%;
+}
 .container-body{
   padding: 0;
   margin: 0;
