--- a/src/Registration/Registration.css
+++ b/src/Registration/Registration.css
@@ -9,6 +9,7 @@
 
 .container-logo > img{
   width: 300px;
+  cursor: pointer;
 }
 
 .container-message{
@@ -23,6 +24,7 @@
 .container-message >h2{
   font-size: 1.5em;
   font-weight: bold;
+
   margin: 0 ;
 }
 .container-message{
@@ -34,7 +36,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  min-width: 500px;
+  min-width: 450px;
   max-width: 1000px;
   justify-content: center;
   align-items: center;
@@ -63,6 +65,7 @@
 .form-group > input{
   padding: 10px;
   display: flex;
+  font-family: Quicksand, sans-serif;
   flex-direction: column;
   border-radius: 4px;
   border: 1px solid var(--cor-azul-escuro);
@@ -157,4 +160,146 @@ textarea{
   font-family: Quicksand, sans-serif;
   margin: 40px 0 0px 0;
   cursor: pointer;
+}
+.container-message > p{
+  font-size: 1em;
+  font-weight: 200;
+  font-size: Quicksand, sans-serif;
+  color: var(--cor-azul-claro);
+  text-align: center;
+  margin: 0 ;
+}
+
+
+
+@media only screen and (max-width: 830px){
+  .container-formulario{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-width: 400px;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 40px;
+    background-color: #E6E6E6;
+    border-radius: 8px;
+    margin: 30px 20px;
+    max-width: 1000px;
+   box-sizing: border-box;
+  }
+  .container-message > p{
+    font-size: 1em;
+    font-weight: 200;
+    font-size: Quicksand, sans-serif;
+    color: var(--cor-azul-claro);
+    text-align: center;
+    margin: 0 ;
+  }
+  .container-message >h2{
+    font-size: 1.4em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 ;
+  }
+
+}
+
+
+@media only screen and (max-width: 550px){
+  .container-formulario{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-width: 350px;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 40px;
+    background-color: #E6E6E6;
+    border-radius: 8px;
+    margin: 30px 20px;
+    max-width: 1000px;
+   box-sizing: border-box;
+  }
+  .data{
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    align-items: center;
+    margin: 10px 0;
+    padding: 0;
+  }
+  .container-message > p{
+    font-size: 1em;
+    font-weight: 200;
+    font-size: Quicksand, sans-serif;
+    color: var(--cor-azul-claro);
+    text-align: center;
+    margin: 0 ;
+  }
+  .container-message >h2{
+    font-size: 1.4em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 ;
+  }
+
+}
+
+
+@media only screen and (max-width: 380px){
+  .container-formulario{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-width: 320px;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 20px;
+    background-color: #E6E6E6;
+    border-radius: 8px;
+    margin: 30px 20px;
+    max-width: 1000px;
+   box-sizing: border-box;
+  }
+  .data{
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    align-items: center;
+    margin: 10px 0;
+    padding: 0;
+  }
+  .container-message{
+    display: flex;
+    flex-direction: column;
+    font-family: Quicksand, sans-serif;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: var(--cor-azul-escuro);
+  }
+  .container-message >h2{
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 ;
+  }
+  .container-message > p{
+    font-size: 1em;
+    font-weight: 200;
+    font-size: Quicksand, sans-serif;
+    color: var(--cor-azul-claro);
+    text-align: center;
+    margin: 0 ;
+  }
+  .container-message{
+    margin:0 0 20px 0;
+    width: auto;
+  
+  }
+  
+
 }
