--- a/src/css/tablet/tablet-1100-866.css
+++ b/src/css/tablet/tablet-1100-866.css
@@ -1,4 +1,5 @@
-
+@media only screen and (max-width: 1100px){
+    
 .home-up{
     display: flex;
     justify-content: center;
@@ -20,8 +21,8 @@
 
 .home-up > .home-up-container > .imagem-logo{
     display: flex;
-    width: 800px;
-    height: 340px;
+    width: 700px;
+    height: 330px;
     margin: auto;
     align-items: center;
     justify-content: center;
@@ -47,17 +48,17 @@
     height: 90px;
     width:80%;
     display: flex;
+    font-size: xx-small;
     justify-content: center;
 
 }
 .btn-encontre-sua-oportunidade{
     background-color: var(--cor-amarelho);
-    font-size: 36px;
+    font-size: 31px;
     height: 70px;
     font-family: Quicksand, sans-serif;
     font-weight: bold;
     border-radius: 10px;
-    cursor: pointer;
     color: var(--cor-branco);
     
 }
@@ -183,7 +184,7 @@ video{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 96%;
     
 }
 .container-como-funciona{
@@ -230,21 +231,22 @@ video{
     width: 90%;
     height: 100%;
     gap: 10px;
+    font-size: small;
+    
    
 }
 
 .card-azul h2{
     color: var(--cor-branco);
     background-color: var(--cor-azul-escuro);
-    
-    font-size: 2em;
+    font-size: 1.7em;
     font-family: Quicksand, sans-serif;
     font-weight: bold;
     margin: auto;
     border-radius: 4px;
-    padding: 50px 10px;
-    width: 300px;
+    padding: 50px 5px;
     
+    width: 250px;
 }
 
 
@@ -252,14 +254,13 @@ video{
 .card-amarelo h2{
     color: var(--cor-branco);
     background-color: var(--cor-amarelho);
-    
-    font-size: 2em;
+    font-size: 1.7em;
     font-family: Quicksand, sans-serif;
     font-weight: bold;
-    margin: 0;
+    margin: auto;
     border-radius: 4px;
-    padding: 50px 10px;
-    width: 300px;
+    padding: 50px 5px;
+    width: 250px;
   
 }
 
@@ -269,13 +270,13 @@ video{
     color: var(--cor-branco);
     background-color: var(--cor-laranja);
     
-    font-size: 2em;
+    font-size: 1.7em;
     font-family: Quicksand, sans-serif;
     font-weight: bold;
-    margin: 0;
+    margin: auto;
     border-radius: 4px;
-    padding: 50px 10px;
-    width: 300px;
+    padding: 50px 5px;
+    width: 250px;
 }
 
 .cards{
@@ -284,6 +285,7 @@ video{
     align-items: center;
     flex-direction: row;
     gap: 10px;
+    width: 100%;
  
 
 }
@@ -292,6 +294,7 @@ video{
     width: 100%;
     margin: auto;
     display: flex;
+    font-size: 0.7em ;
     justify-content: center;
     flex-direction: column;
 
@@ -303,7 +306,7 @@ video{
     color: var(--cor-azul-escuro);
     justify-content: center;
     margin:  auto;
-    font-size:20px;
+    font-size:15px;
     font-family: Quicksand, sans-serif;
     
 
@@ -328,3 +331,7 @@ video{
     font-family: Quicksand, sans-serif;
     font-size: large;
 }
+}
+
+
+
