--- a/src/css/celular/celular-500-400.css
+++ b/src/css/celular/celular-500-400.css
@@ -52,6 +52,9 @@
     .container-p{
         width: 400px;
     }
+    .text-area{
+        font-family: Quicksand, sans-serif;
+    }
     
     .container-btn
     {
