--- a/src/css/computador/computador.css
+++ b/src/css/computador/computador.css
@@ -328,3 +328,6 @@ video{
     font-family: Quicksand, sans-serif;
     font-size: large;
 }
+.text-area{
+    font-family: Quicksand, sans-serif;
+}
