--- a/src/Registration/Registration.css
+++ b/src/Registration/Registration.css
@@ -118,6 +118,7 @@
 
 textarea{
   width: 100%;
+
   border-radius: 4px;
   border: 1px solid var(--cor-azul-escuro);
   padding: 10px;
@@ -253,6 +254,15 @@ textarea{
     text-align: center;
     margin: 0 ;
   }
+  textarea{
+    width: 100%;
+    height: 90px;
+    border-radius: 4px;
+    border: 1px solid var(--cor-azul-escuro);
+    padding: 10px;
+    box-sizing: border-box;
+    font-family: Quicksand, sans-serif;
+  }
   .label-patinho-feio{
     font-size: 17px !important;
   }
@@ -307,6 +317,15 @@ textarea{
     color: var(--cor-azul-claro);
     text-align: center;
     margin: 0 ;
+  }
+  textarea{
+    width: 100%;
+    height: 100px;
+    border-radius: 4px;
+    border: 1px solid var(--cor-azul-escuro);
+    padding: 10px;
+    box-sizing: border-box;
+    font-family: Quicksand, sans-serif;
   }
   .container-message{
     margin:0 0 20px 0;
